# ai-ollama

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.in  requirements.txt
oagent/: cli.py  funk.py  run_litellm.py  utils.py
