[project]
name = "oagent"
version = "2024.0.0"
dependencies = [
  "click",
  "rich",
  "pyyaml",
  "ollama",
]
requires-python = ">=3.11"
authors = [
  {name = "Scott Pierce", email = "ddrscott@gmail.com"},
]
description = "Agentic Coder"
readme = "README.md"
classifiers = [
  "Programming Language :: Python"
]
[project.scripts]
oagent = "oagent:cli.run"
